# Soundcheck

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  SUBMISSION.md  agent_config.yaml.example  render.yaml  requirements.txt  vercel.json
agents/: bandleader.py  compliance_mapper.py  customer_service.py  pyproject.toml  reviewer.py  scout.py
agents/common/: __init__.py  band_client.py  events.py  ledger.py  repo_tools.py  rooms.py  runtime.py  score.py
agents/fixer/: __init__.py  agent.py  git_pr.py  tools.py
agents/scanners/: __init__.py  code_scanner.py  dependencies.py  secrets_config.py  tools.py
backend/: index.py  pyproject.toml  requirements.txt  seed.db
backend/app/: band_human.py  band_reader.py  db.py  main.py  projection.py
design/: tokens.css
design/reference/: Design_Language.html  The_Stage.html
design/stage/: app.jsx  data.js  glyphs.jsx
fixtures/vuln-app/: README.md  app.py  requirements.txt  settings.py
frontend/: .env.example  auth.config.ts  auth.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: app.css  auth.css  globals.css  layout.tsx  marketing.css  page.tsx  stage.css  tokens.css
frontend/app/app/: page.tsx
frontend/app/conductor/: page.tsx
frontend/app/findings/: page.tsx
frontend/app/login/: page.tsx
frontend/app/posture/: page.tsx
frontend/app/roster/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/stage/: page.tsx
frontend/components/: approve-action.tsx  ask-band.tsx  connect.tsx  copy-link.tsx  encore.tsx  fix-button.tsx  glyphs.tsx  google-mark.tsx  hero-stage.tsx  login-form.tsx  mention-text.tsx  nav.tsx  refresh-on-mount.tsx  run-tabs.tsx  signup-form.tsx  stage-chat.tsx  stage-mic.tsx  stage-view.tsx  tape-view.tsx
frontend/db/: schema.sql
frontend/lib/: api.ts  db.ts  owner.ts  run-name.ts  types.ts
frontend/scripts/: migrate.mjs
frontend/types/: next-auth.d.ts
infra/: docker-compose.yml
scripts/: p1_smoke.py  register_agents.py  render_start.sh  run_audit.py  run_chat.py  run_narration.py  run_polish.py  run_remediation.py  sanitize_openapi.py  test_providers.sh  watch_room.py
(+14 files in other folders)
