[project]
name = "soundcheck-backend"
version = "0.0.1"
description = "Soundcheck BFF — run orchestration, Human-API/WS bridge, webhooks, ledger projection (read-only cache; Band is the system of record)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-dotenv",
    "pydantic",
    "pyyaml",          # read agent keys to reconstruct rooms via the Agent API
    # Projection uses stdlib sqlite3 (no Docker/Postgres dependency on this host).
    # PyGithub is used by the agents/fixer git-PR service, not the BFF.
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.setuptools]
packages = ["app"]
